--- a/babel.config.json
+++ b/babel.config.json
@@ -1,7 +1,8 @@
 {
-    "presets": ["@babel/preset-env"],
+    "presets": ["@babel/preset-env","@babel/preset-typescript"],
     "plugins": [
-        "i18next-extract",
+        // "i18next-extract",
+           // "@babel/plugin-syntax-import-attributes"
         // […] your other plugins […]
       ]
   }
